...
    // Local class variables
    let availableFields = [
        Field("count",        "Count",            width: 60),
        Field("location",     "Location",         width: 80 ,hide: true, align: NSTextAlignment.left),
        Field("date",         "Date",             width: 100),
        Field("player1",      "Winner",           width: 80),
        Field("score1",       "Score",            width: 60),
        Field("player2",      "Second",           width: 80),
        Field("score2",       "Score",            width: 60),
        Field("player3",      "Third",            width: 80),
        Field("score3",       "Score",            width: 60),
        Field("player4",      "Fourth",           width: 80),
        Field("score4",       "Score",            width: 60),
        Field("detail",       "",                 width: 0) ,
        Field("delete",       "",                 width: 0) ,
        Field("padding",      "",                 width: 0)
    ]
    
    var history: History!
...
