...
            Utility.getActiveViewController()!.alertMessage("Error saving game")
        }
    }
    
    public func warnExitGame(from viewController: ScorecardViewController, completion: @escaping ()->()) {
        if  viewController.gameMode.isHosting || viewController.gameMode == .scoring {
            viewController.alertDecision("Warning: This will clear the existing score card and start a new game.\n\n Are you sure you want to do this?", title: "Finish Game", okButtonText: "Confirm", okHandler: {
            
                Scorecard.shared.exitScorecard(advanceDealer: false, resetOverrides: true) {
                    Utility.mainThread {
                        completion()
                    }
                }
...
