...
                                                    <action selector="saveScorePressed:" destination="mEi-hH-CUE" eventType="touchUpInside" id="5ki-0u-eNT"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yq9-4F-fQq" userLabel="Undo Button" customClass="ClearButton" customModule="Whist" customModuleProvider="target">
                                                <rect key="frame" x="25" y="0.0" width="30" height="44"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" image="undo"/>
                                                <connections>
                                                    <action selector="undoButtonClicked:" destination="mEi-hH-CUE" eventType="touchUpInside" id="iOb-gA-sLo"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" name="Clear"/>
...
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qsz-Bp-ie1" userLabel="Summary Button" customClass="ClearButton" customModule="Whist" customModuleProvider="target">
                                                <rect key="frame" x="25" y="5" width="30" height="34"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" image="forward"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="summary"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="summaryClicked:" destination="mEi-hH-CUE" eventType="touchUpInside" id="hbE-1M-3As"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
